fixed overlapping issue for book

--- a/css/index.css
+++ b/css/index.css
@@ -369,7 +369,7 @@ h2 {
 
 /* Book image */
 .book-cover {
-  width: 850px;
+  width: 450px;
   height: auto;
   border-radius: 10px;
   margin-bottom: 15px;
